# fouroversix

./: .gitignore  .gitmodules  404.html  MANIFEST.in  README.md  index.html  mr.md  objects.inv  pyproject.toml  setup.py
.github/workflows/: _build.yml  publish.yml
docs/: matmul.md  ptq.md  quantization.md
if4_mac/: README.md
if4_mac/rtl/if4_mac/: if4_mac.sv  scale_factors_multiplier.sv  w_a_multiplier.sv  wa_sf_multiplier.sv
if4_mac/rtl/nvfp4_mac/: nvfp4_mac.sv  scale_factors_multiplier.sv  w_a_multiplier.sv
if4_mac/scripts/: gen_golden_ref.py  run_testbench.sh
if4_mac/tb/: if4_mac_golden_ref.svh  nvfp4_mac_golden_ref.svh  tb_if4_mac.sv  tb_nvfp4_mac.sv
matmul/: index.html
quantization/: index.html
scripts/: build.py  create_test_case.py  hadamard_code_gen.py  resources.py  speedtest_on_modal.py  test_on_modal.py
scripts/diffusers/: bench_flux_klein.py  generate_flux_klein.py  test_diffusers.py
scripts/ptq/: __main__.py  awq.py  evaluator.py  experiment.py  rtn.py  smoothquant.py  spinquant.py  utils.py  worker.py
scripts/ptq/coordinators/: base.py  local.py  modal.py
scripts/ptq/evaluators/: __init__.py  awq.py  evaluator.py  gptq.py  high_precision.py  rtn.py  smoothquant.py  spinquant.py
scripts/ptq_hf/: __main__.py  download_model.py  experiment.py  utils.py
scripts/ptq_hf/coordinators/: base.py  local.py  modal.py
scripts/ptq_hf/evaluators/: awq.py  evaluator.py  gptq.py  high_precision.py  rtn.py  smoothquant.py  spinquant.py  utils.py
scripts/speedtest/: matmul.py  quantize.py
scripts/train/: __main__.py
scripts/train/configs/: hybrid_1B_bf16.json  hybrid_1B_if4.json  hybrid_1B_nvfp4.json  hybrid_1B_nvfp4_fouroversix.json  hybrid_1B_nvint4.json  transformer_1B_bf16.json  transformer_1B_fp4.json  transformer_1B_fp4_fouroversix.json  transformer_1B_nvfp4.json  transformer_1B_nvfp4_fouroversix.json  transformer_340M_bf16.json  transformer_340M_fp4.json  transformer_340M_fp4_fouroversix.json  transformer_340M_if4.json  transformer_340M_if4_mseden.json  transformer_340M_if4_nogradsr.json  transformer_340M_nvfp4.json  transformer_340M_nvfp4_fouroversix.json  transformer_340M_nvfp4_fouroversix_mseden.json  transformer_340M_nvfp4_fouroversix_nogradsr.json  transformer_340M_nvfp4_nogradsr.json  transformer_340M_nvfp4_wgradnvint4.json  transformer_340M_nvint4.json
search/: search_index.json
src/fouroversix/: __init__.py  backend.py  frontend.py  ptq.py  utils.py
src/fouroversix/csrc/: bindings.cpp  transpose_fp4.cu
src/fouroversix/csrc/include/: fp4_quant.h  fp4_quant_kernel.h  fp4_quant_launch_template.h  hadamard_transform.h  kernel_traits.h  utils.h
src/fouroversix/csrc/quantize/: fp4_quant.cu
src/fouroversix/diffusers/: __init__.py  config.py  quantizer.py  utils.py
src/fouroversix/integrations/: vllm_quantization.py
src/fouroversix/kernels/: constants.py
src/fouroversix/kernels/triton/: __init__.py  constants.py  dequantize.py  fp.py  fp3.py  fp4.py  fp6.py  fp8.py  if4.py  if6.py  int3.py  int4.py  int6.py  matmul.py  ops.py  ops_transpose.py  quantize.py  quartet_ii.py  rht.py  transpose.py
src/fouroversix/matmul/: __init__.py  backend.py  frontend.py  pytorch.py  triton.py
src/fouroversix/matmul/cutlass/: backend.py  ops.py
src/fouroversix/matmul/triton/: __init__.py  backend.py  kernel.py
src/fouroversix/model/: __init__.py  config.py  fp4_linear.py  linear.py  quantize.py
src/fouroversix/model/layers/: linear.py
src/fouroversix/model/modules/: __init__.py  gpt_oss.py  linear.py  qwen.py  transposable_linear.py
src/fouroversix/quantize/: __init__.py  backend.py  config.py  cuda.py  dequantize_utils.py  fp4_tensor.py  frontend.py  quantized_tensor.py  reference.py  transformer_engine.py  transpose.py  triton.py  triton_kernel.py
src/fouroversix/quantize/cuda/: backend.py  ops.py
src/fouroversix/quantize/pytorch/: backend.py  fp4.py  fp6.py  int4.py  reference.py
src/fouroversix/quantize/triton/: backend.py  (+2 more)
src/fouroversix/weight_conversions/: __init__.py  conversions.py  gpt_oss.py
tests/: test_correctness.py  test_cuda_transpose_standalone.py  test_dims.py  test_matmul.py  test_quantize.py  test_transposable_linear.py
(+3 files in other folders)
